fixing backtick issue

--- a/frappe.yaml
+++ b/frappe.yaml
@@ -9,7 +9,7 @@ services:
       - "traefik.enable=true"
       - "traefik.docker.network=traefik-public"
       - "traefik.http.services.${ROUTER?ROUTER not set}.loadbalancer.server.port=8080"
-      - "traefik.http.routers.${ROUTER}-https.rule=Host(\`${SITES?SITES not set}\`)"
+      - "traefik.http.routers.${ROUTER}-https.rule=Host(`${SITES?SITES not set}`)"
       - "traefik.http.routers.${ROUTER}-https.entrypoints=websecure"
       - "traefik.http.routers.${ROUTER}-https.tls=true"
       - "traefik.http.routers.${ROUTER}-https.service=${ROUTER}"
