wait lets go one by one

--- a/frappe.yaml
+++ b/frappe.yaml
@@ -14,6 +14,8 @@ services:
       - "traefik.http.routers.${ROUTER}-https.tls=true"
       - "traefik.http.routers.${ROUTER}-https.service=${ROUTER}"
       - "traefik.http.routers.${ROUTER}-https.tls.certresolver=${CERT_RESOLVER}"
+      - "traefik.http.routers.${ROUTER}-https.middlewares=${MIDDLEWARES}"
+
   configurator:
     security_opt:
       - no-new-privileges:true
